force-app/main/default/objects/EC_WebServiceCalloutsLog__c/EC_WebServiceCalloutsLog__c.object-meta.xml
<CustomObject>
    <description>This object to log all the Web Service Callouts</description>
    <label>WebService Callouts Log</label>
    <nameField>
        <displayFormat>WBC-{0000000000}</displayFormat>
        <label>WebService Callouts Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WebService Callouts Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>