force-app/main/default/objects/EC_WebServiceCalloutsLog__c/fields/EC_CodeTraverseLog__c.field-meta.xml
<CustomField>
    <fullName>EC_CodeTraverseLog__c</fullName>
    <description>Logs class entry exit, and method entry exits</description>
    <label>Code Traverse Log</label>
    <type>TextArea</type>
</CustomField>