force-app/main/default/objects/EC_WebServiceCalloutsLog__c/fields/EC_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>EC_ErrorMessage__c</fullName>
    <description>Error received in the Web Service callout</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>