force-app/main/default/objects/EC_WebServiceCalloutsLog__c/fields/EC_RequestCall__c.field-meta.xml
<CustomField>
    <fullName>EC_RequestCall__c</fullName>
    <description>The request JSON used</description>
    <label>Request Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>