force-app/main/default/objects/EC_WebServiceCalloutsLog__c/fields/EC_RequestName__c.field-meta.xml
<CustomField>
    <fullName>EC_RequestName__c</fullName>
    <description>The type of web service callout request performed</description>
    <label>Request Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>