force-app/main/default/objects/EC_WebServiceCalloutsLog__c/fields/EC_ResponseCall__c.field-meta.xml
<CustomField>
    <fullName>EC_ResponseCall__c</fullName>
    <description>The response JSON received.</description>
    <label>Response Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>