force-app/main/default/objects/EC_WebServiceCalloutsLog__c/fields/EC_Status__c.field-meta.xml
<CustomField>
    <fullName>EC_Status__c</fullName>
    <description>Status of the Web Service call performed</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>