force-app/main/default/objects/EC_WebServiceCalloutsLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EC_Status__c</columns>
    <columns>EC_RequestName__c</columns>
    <columns>EC_ResponseCall__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EC_RequestName__c</field>
        <operation>contains</operation>
        <value>Request</value>
    </filters>
    <label>All</label>
</ListView>